@@ -2,6 +2,7 @@
   o enable to select 'scim-bridge' as IM
   o install needed packages for skim
   o install scim-qtimm for scim default config
+  o remove extra SCIM combinations (simpler)
 
 Version 10.4.196 - 14 September 2007, by Olivier "blino" Blin
 
